# cutpack

./: .gitignore  CMakeLists.txt  CutpackOperation.h  CutsceneFile.h  README.md  checksum_table.txt  main.cpp
data/: checksum_table.txt
include/cutpack/data/: cutscene_file.h
source/: cutpack_operation.h  main.cpp  qb_crc.cpp
src/: main.cpp
src/util/: qb_crc.cpp
